[package]
name = "tarsum"
description = "Compute a checksum for each file in a Tar archive."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.62", features = ["backtrace"]}
clap = {version = "4.0.8", features = ["derive"]}
digest = "0.10.5"
hex = "0.4.3"
md-5 = "0.10.5"
sha1 = "0.10"
sha2 = "0.10.6"
tar = "0.4.38"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
